--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,36 +5,12 @@
     android:layout_height="fill_parent"
     android:weightSum="1">
 
-
-    <EditText
-     android:id="@+id/latitudeEditText"
-     android:layout_width="fill_parent"
-     android:layout_height="wrap_content"
-     android:hint="Latitude"
-     android:inputType="text" />
-
-    <EditText
-        android:id="@+id/longitudeEditText"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="Longitude" />
-
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text = "Submit"
-        android:gravity = "center"
-        />
-
     <org.osmdroid.views.MapView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:enabled="true"
     android:clickable="true"
     android:id="@+id/map1"
-    tilesource="Mapnik"
-        android:layout_weight="1.13" />
+    tilesource="Mapnik" />
 
 </LinearLayout>
