--- a/app/src/main/res/menu/menu_hello_map.xml
+++ b/app/src/main/res/menu/menu_hello_map.xml
@@ -4,4 +4,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/choosemap" android:title="@string/choosemap"/>
     <item android:id="@+id/setlocation" android:title="@string/setlocation"/>
+    <item android:id="@+id/choosemaplist" android:title="@string/chooselist"/>
 </menu>
