--- a/app/src/main/res/menu/menu_hello_map.xml
+++ b/app/src/main/res/menu/menu_hello_map.xml
@@ -5,4 +5,5 @@
     <item android:id="@+id/choosemap" android:title="@string/choosemap"/>
     <item android:id="@+id/setlocation" android:title="@string/setlocation"/>
     <item android:id="@+id/choosemaplist" android:title="@string/chooselist"/>
+    <item android:id="@+id/chooseprefs" android:title="@string/chooseprefs"/>
 </menu>
